# bjj_scoreboard_rust

./: Cargo.toml
src/: error.rs  lib.rs  main.rs  prelude.rs
